[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[project]
name = "thumbzilla_api"
version = "1.0"
description = "An API for thumbzilla.com"
authors = [
  {name = "EchterAlsFake", email = "EchterAlsFake@proton.me"}
]
requires-python = ">=3.12"
license = "LGPL-3.0-only"
license-files = ["LICENSE"]
keywords = ["thumbzilla", "phub", "porn", "api", "web scrapper", "api wrapper"]
classifiers = [
  "Programming Language :: Python"
]
dependencies = [
  "eaf_base_api",
  "m3u8",
  "bs4",
]

[project.optional-dependencies]
av = ["av; python_version >= '3.10'"]
full = ["lxml"] # LXML for faster parsing speed, though optional :)

[project.urls]
Documentation = "https://github.com/EchterAlsFake/API_Docs/blob/master/Porn_APIs/thumbzilla.md"
Repository = "https://github.com/EchterAlsFake/thumbzilla_api"

[tool.uv.build-backend]
module-name = "thumbzilla_api"
module-root = ""
